--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="image"></div>
         </div>
         <div class="Para">
-            <p>readbucks is a fun, laid-back coffee spot known for its yummy brews and chill atmosphere. It's a great place to relax and enjoy a flavorful cup.</p>
+            <p>Charbucks is a fun, laid-back coffee spot known for its yummy brews and chill atmosphere. It's a great place to relax and enjoy a flavorful cup.</p>
         </div>
         <div class="image"></div>
     </section>
